# Nexus-ai-

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  NexusAI_Project_Design_Document.docx  NexusAI_System_Architecture_Document_v1.docx  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: __init__.py  main.py
app/ai/: __init__.py
app/api/: deps.py  metrics.py
app/core/: config.py  context.py  errors.py  logging.py  metrics.py  observability.py  ratelimit.py  security.py  security_headers.py
app/db/: base.py  session.py
app/eval/: __init__.py  harness.py  metrics.py
app/models/: __init__.py  agent_run.py  chunk.py  conversation.py  document.py  embedding.py  enums.py  membership.py  message.py  refresh_token.py  user.py  workspace.py
app/schemas/: agent.py  auth.py  conversation.py  document.py  user.py  workspace.py
app/services/: __init__.py  auth_service.py  chat_service.py  conversation_service.py  document_service.py  exceptions.py  retrieval.py  semantic_cache.py  token_service.py  user_service.py  workspace_service.py
app/web/: index.html
app/workers/: __init__.py  celery_app.py  tasks.py
deploy/kubernetes/: api-deployment.yaml  configmap.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.example.yaml  (+2 more)
docs/: PROJECT_DOCUMENTATION.md
load/: chat.js  locustfile.py
migrations/: env.py
tests/: __init__.py  conftest.py  test_agent.py  test_agent_memory.py  test_auth.py  test_eval.py  test_health.py  test_ingestion.py  test_llm_openai.py  test_observability.py  test_rag.py  test_ratelimit.py  test_semantic_cache.py  test_vectorstore.py  test_workspaces.py
(+39 files in other folders)
